--- a/src/index.css
+++ b/src/index.css
@@ -1,17 +1,17 @@
 body {
-  margin: 0;
-  background-color: #fff;
-  color: #ffffff;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    margin: 0;
+    background-color: #fff;
+    color: #ffffff;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto',
+        'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans',
+        'Helvetica Neue', sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+        monospace;
 }
 
 h1,
@@ -20,40 +20,38 @@ h3,
 h4,
 h5,
 h6 {
-  margin-top: 0;
+    margin-top: 0;
 }
 
 img {
-  display: block;
-  max-width: 100%;
-  height: auto;
+    display: block;
+    max-width: 100%;
+    height: auto;
 }
 
 a {
     text-decoration: none;
-  }
-
+}
 
 /* these styles uses in  AuthGoogle Component */
 .google-auth {
-  display: flex !important;
-  justify-content: center;
-  width: 100%;
-  background-color: transparent !important;
-  border: 1px solid white !important;
+    display: flex !important;
+    justify-content: center;
+    width: 100%;
+    background-color: transparent !important;
+    border: 1px solid white !important;
 }
 
 .google-auth span {
-  flex-grow: 1;
-  display: block;
-  max-width: 100%;
+    flex-grow: 1;
+    display: block;
+    max-width: 100%;
 }
 
 /* end AuthGoogle Component */
 
 .list {
-  list-style: none;
-  padding-left: 0;
-  margin: 0;
-  ;
+    list-style: none;
+    padding-left: 0;
+    margin: 0;
 }
